# piles

./: .gitignore  CMakeLists.txt  makefile  partie.txt
headers/: activite.h  coordonnees.h  joueurs.h  piles.h  plateau.h  points.h
src/: activite.c  coordonnees.c  joueurs.c  main.c  piles.c  plateau.c  points.c
